<resources>
    <string name="app_name">dembuocchan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bottom_nav_item1">Kế hoạch</string>
    <string name="bottom_nav_item2">Tiến độ</string>
    <string name="bottom_nav_item3">Bắt đầu</string>
    <string name="bottom_nav_item4">Bước</string>
    <string name="bottom_nav_item5">Cài đặt</string>
<<<<<<< HEAD
=======
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> master
</resources>